// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buy variant matches the Button snapshot 1`] = `
<button
  className="yoast-button yoast-button--buy"
  onClick={[Function]}
  type="button"
>
  test
  <span
    className="yoast-button--buy__caret"
  />
</button>
`;

exports[`Buy variant matches the Link snapshot 1`] = `
<a
  className="yoast-button yoast-button--buy"
  href="#"
>
  test
  <span
    className="yoast-button--buy__caret"
  />
</a>
`;

exports[`Icon CloseButton matches the Button snapshot 1`] = `
<button
  aria-label="Close"
  className="yoast-close"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    focusable="false"
    role="img"
    viewBox="0 0 352 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
    />
  </svg>
</button>
`;

exports[`Primary variant matches the Button snapshot 1`] = `
<button
  className="yoast-button yoast-button--primary"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`Primary variant matches the Link snapshot 1`] = `
<a
  className="yoast-button yoast-button--primary"
  href="#"
>
  test
</a>
`;

exports[`Secondary variant matches the Button snapshot 1`] = `
<button
  className="yoast-button yoast-button--secondary"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`Secondary variant matches the Link snapshot 1`] = `
<a
  className="yoast-button yoast-button--secondary"
  href="#"
>
  test
</a>
`;

exports[`Text variant matches the Button snapshot 1`] = `
<button
  className="yoast-remove"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`Text variant matches the Button snapshot 2`] = `
<button
  className="yoast-hide"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`Text variant matches the Link snapshot 1`] = `
<a
  className="yoast-remove"
  href="#"
>
  test
</a>
`;

exports[`Text variant matches the Link snapshot 2`] = `
<a
  className="yoast-hide"
  href="#"
>
  test
</a>
`;
